@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Talon</string>
     <string name="app_name_full">Talon for Twitter</string>
-    <string name="extension_description">Megjeleníti az olvasatlan tweetek, említések és közvetelen üzenetek számát, amint frissülnek.</string>
+    <string name="extension_description">Megjeleníti az olvasatlan Tweetek, említések és közvetelen üzenetek számát, amint frissülnek.</string>
 
     <!-- Action Bar -->
     <string name="menu_refresh">Idővonal frissítése</string>
@@ -12,14 +12,14 @@
     <string name="menu_follow">Felhasználó követése</string>
     <string name="menu_unfollow">Felhasználó követésének megszüntetése</string>
     <string name="menu_tweet">Tweet küldése</string>
-    <string name="menu_dm">Közvetlen üzenet küldése</string>
+    <string name="menu_dm">Privát üzenet küldése</string>
     <string name="menu_block">Felhasználó tiltása</string>
     <string name="menu_unblock">Felhasználó tiltásának feloldása</string>
     <string name="menu_add_to_list">Hozzáadás a listsához</string>
     <string name="menu_change_picture">Profilkép szerkesztése</string>
     <string name="menu_change_bio">Profil névjegy szerkesztése</string>
     <string name="menu_change_banner">Profil fejléc szerkesztése</string>
-    <string name="menu_direct_message">Új közvetlen üzenet</string>
+    <string name="menu_direct_message">Új privát üzenet</string>
     <string name="menu_save_image">Kép mentése</string>
     <string name="menu_favorite">Felhasználó a kedvencekhet</string>
     <string name="menu_unfavorite">Felhasználó eltávolítása a kedvencekből</string>
@@ -47,30 +47,30 @@
     <string name="pictures">Képek</string>
     <string name="timeline">Idővonal</string>
     <string name="mentions">Említések</string>
-    <string name="direct_messages">Közvetlen üzenetek</string>
+    <string name="direct_messages">Privát üzenetek</string>
     <string name="retweets">Retweetek</string>
     <string name="favorite_tweets">Kedvenc Tweetek</string>
     <string name="favorite_users">Kedvenc felhasználók</string>
     <string name="trends">Trendek</string>
     <string name="local_trends">Helyi trendek</string>
-    <string name="world_trends">Trendek a világban</string>
+    <string name="world_trends">Világtrendek</string>
     <string name="search">Keresés</string>
     <string name="lists">Listák</string>
     <string name="search_hint">\@felhasználónév vagy keresés...</string>
-    <string name="new_tweet">új tweet</string>
-    <string name="new_tweets">új tweetek</string>
-    <string name="no_new_tweets">Nincsenek új tweetek</string>
+    <string name="new_tweet">új Tweet</string>
+    <string name="new_tweets">új Tweet</string>
+    <string name="no_new_tweets">Nincsenek új Tweetek</string>
     <string name="new_mention">új említés</string>
     <string name="new_mentions">új említések</string>
     <string name="no_new_mentions">Nincsenek új említések</string>
     <string name="new_direct_message">új követlen üzenet</string>
     <string name="new_direct_messages">új követlen üzenetek</string>
-    <string name="no_new_direct_messages">Nincsenek új közvetlen üzenetek</string>
+    <string name="no_new_direct_messages">Nincsenek új privát üzenetek</string>
     <string name="tap_to_setup">Érintse meg a beállításhoz</string>
     <string name="new_account">Új fiók</string>
-    <string name="from_top">a legfelsőtől</string>
+    <string name="from_top">a tetejéig</string>
     <string name="jump_to_top">Elsőhöz</string>
-    <string name="all_read">Összes olvasott!</string>
+    <string name="all_read">Mind elolvasva!</string>
     <string name="view_new">Betölti?</string>
     <string name="old_interactions">Összes esemény</string>
 
@@ -87,7 +87,7 @@
     <string name="mark_read">Olvasott</string>
     <string name="noti_reply">Válasz</string>
     <string name="popup">Előhoz</string>
-    <string name="fav_user_tweets">kedvenc felhasználó új tweetjei</string>
+    <string name="fav_user_tweets">kedvenc felhasználó új Tweetjei</string>
     <string name="sec_acc">Második fiók</string>
     <string name="talon_pull">Talon Pull</string>
     <string name="listening">Figyelés</string>
@@ -119,7 +119,7 @@
     <string name="third_info">Reméljük élvezni fogja a Talon használatát!\n\n-- Luke Klinker</string>
     <string name="syncing_timeline">Idővonal szinkronizálása...</string>
     <string name="syncing_mentions">Említések szinkronizálása...</string>
-    <string name="syncing_direct_messages">Közvetlen üzenetek szinkronizálása...</string>
+    <string name="syncing_direct_messages">Privát üzenetek szinkronizálása...</string>
     <string name="syncing_user">Barátok szinkronizálása...</string>
     <string name="done_syncing">A szinkronizálás befejeződött.</string>
     <string name="login_error">Valami hiba történt... Kérem próbálja meg újra!</string>
@@ -130,9 +130,9 @@
 
     <!-- Compose New Activity -->
     <string name="compose_activity">Új Tweet</string>
-    <string name="compose_tweet_hint">Ide írjon...</string>
+    <string name="compose_tweet_hint">Ide Tweeteljen...</string>
     <string name="send_to">Adja meg a felhasználó nevét</string>
-    <string name="direct_message_sent">Közvetlen üzenet elküldve</string>
+    <string name="direct_message_sent">Privát üzenet elküldve</string>
     <string name="type_user">Írja be a felhasználót</string>
     <string name="add_user">Felhasználó hozzáadása</string>
     <string name="location_connected">Hely csatolva</string>
@@ -140,9 +140,9 @@
     <string name="finding_location">Hely keresése</string>
     <string name="draft_found">Piszkozat elérhető</string>
     <string name="apply">Alkalmazza?</string>
-    <string name="tweet_failed">Hiba a tweet küldésekor</string>
+    <string name="tweet_failed">Hiba a Tweet küldésekor</string>
     <string name="tap_to_retry">Érintse meg az újrapróbáláshoz</string>
-    <string name="one_recepient">Közvetlen üzenetet csak egy címzettnek küldhet!</string>
+    <string name="one_recepient">Privát üzenetet csak egy címzettnek küldhet!</string>
 
     <!-- Actionbar Done-Discard -->
     <string name="discard">Elvetés</string>
@@ -157,9 +157,9 @@
     <string name="cancel">Mégsem</string>
     <string name="delete_direct_message">Törli az üzenetet?</string>
     <string name="save_image">Kép elmentve</string>
-    <string name="tweet_success">Sikeres tweetelés</string>
-    <string name="error_sending_tweet">Hiba a tweet küldésekor</string>
-    <string name="tweet_to_long">Túl hosszú tweet!</string>
+    <string name="tweet_success">Sikeres Tweetelés</string>
+    <string name="error_sending_tweet">Hiba a Tweet küldésekor</string>
+    <string name="tweet_to_long">Túl hosszú Tweet!</string>
     <string name="ok">OK</string>
     <string name="no">Nem</string>
     <string name="changelog">Újdonságok</string>
@@ -171,8 +171,8 @@
     <string name="version">Verzió</string>
     <string name="from">Feladó</string>
     <string name="save">Mentés</string>
-    <string name="stop">Stop</string>
-    <string name="tweeted">tweetelve</string>
+    <string name="stop">Leállít</string>
+    <string name="tweeted">Tweetelve</string>
 
     <!-- User Profile Activity -->
     <string name="followers">Követők</string>
@@ -215,11 +215,11 @@
     <string name="tweet_youtube">YouTube</string>
     <string name="menu_quote">Tweet idézése</string>
     <string name="deleted_tweet">Tweet törölve</string>
-    <string name="error_deleting">Hiba a tweet törlésekor</string>
+    <string name="error_deleting">Hiba a Tweet törlésekor</string>
     <string name="sending">Küldés</string>
     <string name="open_what">Megnyitás</string>
     <string name="youtube_error">Hiba a videó lejátszásakor</string>
-    <string name="no_conversation">Nincsenek régebbi tweetek</string>
+    <string name="no_conversation">Nincsenek korábbi Tweetek</string>
     <string name="saving_picture">Kép mentése</string>
     <string name="saved_picture">Kép mentése sikerült</string>
     <string name="retweet_success">Sikeres Retweet</string>
@@ -257,7 +257,7 @@
         <string name="other_options">Egyéb beállítások</string>
         <string name="theme">Téma</string>
         <string name="addon_themes">Téma kiegészítő</string>
-        <string name="addon_note">Kattintson ide új témák kereséséhez.\n\nMEGJEGYZÉS:\n- Ez le fogja tiltani a beépített emoji billentyűzetet, amikor válaszol egy tweetre.\n- Kérjük ne küldjön hibajelentést, amíg nem tudja azt reprodukálni egyéni téma alkalmazása NÉLKÜL.</string>
+        <string name="addon_note">Új témák kereséséhez kattintson ide.\n\nMEGJEGYZÉS:\n- Ez le fogja tiltani a beépített emoji billentyűzetet, amikor válaszol egy Tweetre.\n- Kérjük ne küldjön hibajelentést, amíg nem tudja a hibát reprodukálni egyéni téma alkalmazása NÉLKÜL.</string>
         <string name="use_addon_themes">Téma kiegészítő használata</string>
         <string name="make_a_theme">Téma készítése</string>
         <string name="layout">Elrendezés</string>
@@ -265,7 +265,7 @@
             <string name="themeing_complete_summary">A \"Talon\" most bezáródik.\n\n
                 A változások alkalmazásához csúsztatással el kell távolítania a \"Talon-t\" a legutóbbi alkalmazások listájáról.\n\n
                 Ha a profilképek nem úgy jelennek meg, ahogy kellene (pl. kör vagy négyzet), akkor el kell távolítani és újra hozzá kell adni a widgetet.</string>
-    <string name="layout_summary">Ez a változtatás törölni fogja az alkalmazás gyorsítótárát.</string>
+    <string name="layout_summary">A változtatással törlődni fog az alkalmazás gyorsítótára.</string>
         <string name="text_size">Betűméret</string>
         <string name="night_mode">Éjszakai mód</string>
             <string name="night_mode_night">Éjszaka kezdete</string>
@@ -277,7 +277,7 @@
             <string name="ui_extras_summary">Tartalmazza:\n
                 - Műveleti sáv elrejtése\n
                 - Művelet képes Toast sáv\n
-                - Átlátszó rendszersávok (csak Android 4.4)\n\nA beállítás engedélyezése hatással lesz a görgetési teljesítményre.</string>
+                - Átlátszó rendszersávok (csak Android 4.4)\n\nAz opció engedélyezése hatással lesz a görgetési teljesítményre.</string>
         <string name="inline_pics">Beágyazott képek megjelenítése</string>
         <string name="use_screen_name">Twitter név megjelenítése</string>
             <string name="use_screen_name_summary">A felhasználó Twitter nevének megjelenítése az idővonalon a neve helyett.</string>
@@ -287,7 +287,7 @@
         <string name="get_android">Android Emojik beszerzése</string>
         <string name="get_ios">iOS Emojik beszerzése</string>
         <string name="emoji_dialog_summary">Az emojik alkamazáson belüli engedélyezéséhez, először telepíteni kell a Play Áruházból a \"Sliding Emoji Keyboard\" vagy a \"Sliding Emoji Keyboard - iOS\" csomagot.\n\n
-                A két emoji típus között úgy válthat, hogy eltávolítja az egyiket és telepíti a másikat. Ha mindkét csomag telepítve van, akkor a Talon az alapértelmezett Android emojikat fogja használni.\n\n
+                A két emoji típus között úgy válthat, hogy eltávolítja az egyiket és utána telepíti a másikat. Ha mindkét csomag telepítve van, akkor a Talon az alapértelmezett Android emojikat fogja használni.\n\n
                 MEGJEGYZÉS: Az Emojik a próbaidőszak lejárata után is működni fognak! A csomag használható pluginként és különálló billentyűzetként is.</string>
 
         <string name="theme_light">Világos téma</string>
@@ -297,7 +297,7 @@
     <string name="sync_settings">Szinkronizáció beállítások</string>
         <string name="sync_mobile_data">Mobiladat használata</string>
         <string name="sync_mobile_data_summary">Idővonal automatikus frissítése mobiladat és WiFi használatával.</string>
-        <string name="auto_sync_notifications">Automatikus frissítés értesítés beállítások</string>
+        <string name="auto_sync_notifications">Automatikus frissítés értesítési beállítások</string>
             <string name="notifications">Értesítések</string>
             <string name="vibrate">Rezgés</string>
             <string name="led">LED fény</string>
@@ -308,21 +308,21 @@
         <string name="fav_users_notifications">Kedvenc felhasználó értesítések</string>
         <string name="sync_second_mentions">Második fiók említéseinek szinkronizálása</string>
             <string name="sync_second_mentions_summary">Az első fiókkal együtt automatikusan ellenőrizze és értesítsen új említésekről a második fiókban is.</string>
-        <string name="max_number_summary">A nagyobb érték hosszabb frissítést jelent.</string>
+        <string name="max_number_summary">Nagyobb érték beállításával nő a frissítés ideje.</string>
         <string name="auto_refresh_category">Auto-frissítés beállítások</string>
             <string name="refresh_on_startup">Frissítés indításkor</string>
-            <string name="timeline_sync_interval">Idővonal frissítési gyakoriság</string>
-            <string name="mentions_sync_interval">Említések frissítési gyakoriság</string>
-            <string name="dm_sync_interval">Közvetlen üzenetek frissítési gyakoriság</string>
+            <string name="timeline_sync_interval">Idővonal frissítési gyakorisága</string>
+            <string name="mentions_sync_interval">Említések frissítési gyakorisága</string>
+            <string name="dm_sync_interval">Privát üzenetek frissítési gyakorisága</string>
         <string name="sync_friends">Barátok adatainak szinkronizálása</string>
-        <string name="sync_friends_summary2">Új tweetek írásakor újraszinkronizálja a barátok adatait.</string>
+        <string name="sync_friends_summary2">Új Tweetek írásakor újraszinkronizálja a barátok adatait.</string>
         <string name="sync_friends_summary">Barátok lista kézi frissítése.\n\nEz el lett végezve a bejelentkezéskor, valamint az újak automatikusan hozzá lettek adva, ha a Talonból adta hozzá követéshez. Ez az opció le fogja kérni az összes legújabb "követését".\n\n
-                    Ez az adat egy új tweet írásakor a felhasználók kereséséhez lesz használva.</string>
+                    Ez az adat egy új Tweet írásakor a felhasználók kereséséhez lesz használva.</string>
         <string name="sync_success">Szinkronizáció sikeres</string>
         <string name="sync_failed">Szinkronizáció sikertelen</string>
         <string name="push_notification_options">\"Push értesítések\" beállítás</string>
         <string name="push_notifications">Talon Pull</string>
-            <string name="push_notifications_summary">Egy figyelő szolgáltatást indít, hogy azonnali értesítéseket küldjön új események érkezésekor (említések, közvetlen üzenetek, kedvencek, retweetek, új követők).\n\nAz idővonalán is azonnal élőben jeleníti a tweeteket.</string>
+            <string name="push_notifications_summary">Egy figyelő szolgáltatást indít, hogy azonnali értesítéseket küldjön új események érkezésekor (említések, privát üzenetek, kedvencek, retweetek, új követők).\n\nAz idővonalán is azonnal élőben jeleníti a Tweeteket.</string>
             <string name="push_notification_warning">További információkért kattintson ide.</string>
 
     <string name="notification_settings">Értesítés beállítások</string>
@@ -332,16 +332,16 @@
     <string name="advanced_settings">Haladó beállítások</string>
         <string name="app_feel_category">Alkalmazás beállítások</string>
             <string name="advance_windowed">Előrehozott ablakok</string>
-                <string name="advance_windowed_summary">A profilokat és tweeteket egy \"ablakos\" nézetben jeleníti meg az idővonal felett.</string>
+                <string name="advance_windowed_summary">A profilokat és Tweeteket egy \"ablakos\" nézetben jeleníti meg az idővonal felett.</string>
             <string name="full_screen_browsers">Teljesképernyős böngésző</string>
-                <string name="full_screen_browsers_summary">A weboldalakat tartalmazó tweeteket teljesképernyős módban nyitja meg.</string>
+                <string name="full_screen_browsers_summary">A weboldalakat tartalmazó Tweeteket teljesképernyős módban nyitja meg.</string>
             <string name="reverse_click_actions">Kattintás műveletek megfordítása</string>
                 <string name="reverse_click_actions_summary">Tweeteken történő kattintás műveletek megfordítása.\n\n
                     Alapértelmezett (amikor le van tiltva):\n
-                    - Hosszú kattintás megnyitja a tweetet\n
-                    - Rövid kattintás kibontja a tweetet</string>
+                    - Hosszú kattintás megnyitja a Tweetet\n
+                    - Rövid kattintás kibontja a Tweetet</string>
             <string name="extra_pages">Extra oldalak használata</string>
-                <string name="extra_pages_summary">Hivatkozások és képek oldalak hozzáadása az idővonal bal oldalához.</string>
+                <string name="extra_pages_summary">Hivatkozások és képek oldalak hozzáadása az idővonaltól balra.</string>
             <string name="live_streaming">Élő közvetítés</string>
                 <string name="live_streaming_summary">Több energiát fogyaszt és mindig \"frissít indításkor.\"</string>
         <string name="memory_management">Memóriakezelés beállítások</string>
@@ -351,11 +351,11 @@
             <string name="current_cache_size">Jelenlegi gyorsítótár mérete</string>
                 <string name="cache_dialog_summary">Ez a művelet nem vonható vissza.</string>
             <string name="timeline_size">Idővonal mérete</string>
-                <string name="timeline_size_summary">Az adatbázisban tárolható tweetek maximális száma</string>
+                <string name="timeline_size_summary">Az adatbázisban tárolható Tweetek maximális száma</string>
             <string name="mentions_size">Említések mérete</string>
                 <string name="mentions_size_summary">Az adatbázisban tárolható említések maximális száma</string>
-            <string name="dm_size">Közvetlen üzenetek mérete</string>
-                <string name="dm_size_summary">Az adatbázisban tárolható közvetlen üzenetek maximális száma</string>
+            <string name="dm_size">Privát üzenetek mérete</string>
+                <string name="dm_size_summary">Az adatbázisban tárolható privát üzenetek maximális száma</string>
             <string name="auto_trim">Adatbázisok automatikus karbantartása</string>
             <string name="trim_now">Adatbázisok karbantartása most</string>
                 <string name="trim_dialog">Elindítja a karbantartást?</string>
